# voip-client-python

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AI_Assistant.md  OpenAI_API.md  PJSIP.md  PJSIP_Linux.md  PJSIP_Windows.md  PJSIP_macOS.md  VoIPstudio.md
scripts/: setup_pjsua2.sh
voip_client/: __init__.py  app_ai_bot_call.py  app_ai_chatbot_call.py  app_ai_realtime_call.py  app_ai_rt_call.py  app_custom_call.py  app_echo_call.py  app_phone_call.py  audio_test.py  openai_realtime.py  openai_test.py  pjsip_common.py  pjsip_test.py  pjsip_test_audio.py  pjsip_test_voip.py  voip_common.py  voip_dtmf_test.py  voip_echo_test.py  voip_test_call.py  whisper_assistant.py
